fine tune pages' margins and colors

--- a/Pages/about_me.html
+++ b/Pages/about_me.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="about_me_html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,87 +7,89 @@
     <title>About Me</title>
 </head>
 <body>
-    <div>
-        <h1>About Me</h1>
-        <h3>My Journey</h3>
-        <p>After completing high school in Greece, I moved to New York with the goal of pursuing a pre-med 
-            track in college. Driven by strong academic performance and family expectations, medicine appeared 
-            to be a stable path for growth. However, unforeseen circumstances required me to care for my two 
-            younger siblings, making it challenging to balance my studies. As a result, I redirected my efforts 
-            toward multiple jobs to provide a stable foundation for my family.
-        </p>
-        <p>
-            My career journey began as a shift supervisor at an adult home, where I found deep satisfaction 
-            in helping others. I then transitioned to a role at a music venue, starting as an inventory manager 
-            and advancing to director of operations for retail, events, and music operations. In this position, 
-            I honed my organizational skills and leadership abilities while cultivating a passion for data and 
-            technology. Recognizing the need for further certification to align my skills with equitable 
-            opportunities, I completed Google’s Data Analytics certification, which reignited my interest 
-            in math and opened the door to the tech field. Eager to learn more, I delved into cybersecurity 
-            and software engineering, earning several certifications through self-study. I later enrolled 
-            in a software engineering bootcamp, gaining hands-on experience with the MERN stack and project 
-            management. Additionally, I worked as an Admitting Representative in the emergency department 
-            of a well-renowned hospital, where I gained insights into the healthcare industry and finance 
-            operations. This experience taught me how to thrive in a fast-paced, high-pressure environment.
-        </p>
-        <p>
-            Today, equipped with knowledge in both cybersecurity and software engineering, I’m actively 
-            working on projects to deepen my skills and secure my first role in tech. My next goal is to 
-            pursue a master’s degree in computer science, completing a journey that has come full circle—from 
-            healthcare to a genuine passion for technology, driven by resilience and adaptability.
-        </p>    
-    </div>
-    <div class="technical-skills-div">
-        <h3>My Skills</h3>
-        <ul class="tech-icons">
-            <li class="tech-skill" name="html-5">
-                <i class="fa-brands fa-html5"></i>
-                <p>HTML-5</p>
-            </li>
-            <li class="tech-skill" name="css3">
-                <i class="fa-brands fa-css3-alt"></i>
-                <p>CSS3</p>
-            </li>
-            <li class="tech-skill" name="JavaScript">
-                <i class="fa-brands fa-js"></i>
-                <p>JavaScript</p>
-            </li>     
-            <li class="tech-skill" name="reactjs">
-                <i class="fa-brands fa-react"></i>
-                <p>Reactjs</p>
-            </li>
-            <li class="tech-skill" name="nodejs">
-                <i class="fa-brands fa-node"></i>
-                <p>Nodejs</p>
-            </li>
-            <li class="tech-skill" name="mongo-database">
-                <i class="fas fa-database"></i>
-                <p>Mongo-Db</p>
-            </li>
-            <li class="tech-skill" name="Python">
-                <i class="fa-brands fa-python"></i>
-                <p>Python</p>
-            </li>
-            <li class="tech-skill" name="R">
-                <i class="fas fa-code"></i> <!-- This uses a generic code icon -->
-                <p>R</p>
-            </li>
-            <li class="tech-skill" name="MySQL">
-                <i class="fas fa-database"></i> <!-- MySQL icon representation -->
-                <p>MySQL</p>
-            </li>
-            <li class="tech-skill">
-                <i class="fas fa-lock"></i>
-                <p>Network Security</p>
-            </li>
-            <li class="tech-skill">
-                <i class="fas fa-shield-alt"></i>
-                <p>Threat Protection</p>
-            </li>
-        </ul>
-    </div>
-    <div>
-        <img src="/Media/story book.jpg" alt="Story Book" width="100%" height="auto" style="max-width: 600px; display: block; margin: 0 auto;">
+    <div class="about_me_container">
+        <div>
+            <h1 style="margin-top: 40px;">About Me</h1>
+            <h3>My Journey</h3>
+            <p>After completing high school in Greece, I moved to New York with the goal of pursuing a pre-med 
+                track in college. Driven by strong academic performance and family expectations, medicine appeared 
+                to be a stable path for growth. However, unforeseen circumstances required me to care for my two 
+                younger siblings, making it challenging to balance my studies. As a result, I redirected my efforts 
+                toward multiple jobs to provide a stable foundation for my family.
+            </p>
+            <p>
+                My career journey began as a shift supervisor at an adult home, where I found deep satisfaction 
+                in helping others. I then transitioned to a role at a music venue, starting as an inventory manager 
+                and advancing to director of operations for retail, events, and music operations. In this position, 
+                I honed my organizational skills and leadership abilities while cultivating a passion for data and 
+                technology. Recognizing the need for further certification to align my skills with equitable 
+                opportunities, I completed Google’s Data Analytics certification, which reignited my interest 
+                in math and opened the door to the tech field. Eager to learn more, I delved into cybersecurity 
+                and software engineering, earning several certifications through self-study. I later enrolled 
+                in a software engineering bootcamp, gaining hands-on experience with the MERN stack and project 
+                management. Additionally, I worked as an Admitting Representative in the emergency department 
+                of a well-renowned hospital, where I gained insights into the healthcare industry and finance 
+                operations. This experience taught me how to thrive in a fast-paced, high-pressure environment.
+            </p>
+            <p>
+                Today, equipped with knowledge in both cybersecurity and software engineering, I’m actively 
+                working on projects to deepen my skills and secure my first role in tech. My next goal is to 
+                pursue a master’s degree in computer science, completing a journey that has come full circle—from 
+                healthcare to a genuine passion for technology, driven by resilience and adaptability.
+            </p>    
+        </div>
+        <div class="technical-skills-div">
+            <h3 style="margin-top: 40px;">My Skills</h3>
+            <ul class="tech-icons">
+                <li class="tech-skill" name="html-5">
+                    <i class="fa-brands fa-html5"></i>
+                    <p>HTML-5</p>
+                </li>
+                <li class="tech-skill" name="css3">
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <p>CSS3</p>
+                </li>
+                <li class="tech-skill" name="JavaScript">
+                    <i class="fa-brands fa-js"></i>
+                    <p>JavaScript</p>
+                </li>     
+                <li class="tech-skill" name="reactjs">
+                    <i class="fa-brands fa-react"></i>
+                    <p>Reactjs</p>
+                </li>
+                <li class="tech-skill" name="nodejs">
+                    <i class="fa-brands fa-node"></i>
+                    <p>Nodejs</p>
+                </li>
+                <li class="tech-skill" name="mongo-database">
+                    <i class="fas fa-database"></i>
+                    <p>Mongo-Db</p>
+                </li>
+                <li class="tech-skill" name="Python">
+                    <i class="fa-brands fa-python"></i>
+                    <p>Python</p>
+                </li>
+                <li class="tech-skill" name="R">
+                    <i class="fas fa-code"></i> <!-- This uses a generic code icon -->
+                    <p>R</p>
+                </li>
+                <li class="tech-skill" name="MySQL">
+                    <i class="fas fa-database"></i> <!-- MySQL icon representation -->
+                    <p>MySQL</p>
+                </li>
+                <li class="tech-skill">
+                    <i class="fas fa-lock"></i>
+                    <p>Network Security</p>
+                </li>
+                <li class="tech-skill">
+                    <i class="fas fa-shield-alt"></i>
+                    <p>Threat Protection</p>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <img src="/Media/story book.jpg" alt="Story Book" width="100%" height="auto" style="max-width: 600px; display: block; margin: 0 auto;">
+        </div>
     </div>
 </body>
 </html>
