--- a/Pages/home.html
+++ b/Pages/home.html
@@ -7,47 +7,49 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <header>
-        <h1 class="greetings" style="color: #55198b;">Hello World!<span class="wave">👋</span></h1>
-        <h2>I'm Virginia Nelai</h2>
-        <h4>A Junior Software Engineer focused on building websites and applications 
-            that drive product success. Skilled in frontend development, UI design, 
-            and security solutions, with expertise in HTML, CSS, JavaScript, and React. 
-            I'm passionate about creating impactful user experiences.</h4>
-    </header>
-    <div class="social-media-div">
-        <a href="https://github.com/vnelai" class="sm-button github" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-github"></i>
-        </a> 
-        <a href="https://www.linkedin.com" class="sm-button linkedin" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-linkedin-in"></i>
-        </a> 
-        <a href="mailto:vnelai01@gmail.com" class="sm-button google" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-google"></i>
-        </a>
-        <a href="https://www.facebook.com" class="sm-button facebook" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-facebook-f"></i>
-        </a>
-        <a href="https://www.instagram.com" class="sm-button instagram" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-instagram"></i>
-        </a>
-        <a href="https://twitter.com/" class="sm-button twitter" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a href="https://medium.com" class="sm-button medium" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-medium"></i>
-        </a>
-        <a href="https://www.youtube.com" class="sm-button youtube" target="_blank" rel="noopener noreferrer">
-            <i class="fa-brands fa-youtube"></i>
-        </a>
-    </div>
-    <div class="home-buttons">
-        <a href="/Pages/contact_me.html"><button>Contact Me</button></a>
-        <a href="/Pages/my_resume.html"><button>See My Resume</button></a>
-        <a href="/Pages/projects.html"><button>View My Projects</button></a>
-    </div>
-    <div>
-        <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExeGFhb25ucnNvcjQyaTBsc3ExMGRoZmRxb3Qwc2Z2YnNnOWQybTFnYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/FcqKy4Kj7XOK0hCW4g/giphy.webp" alt="Giphy-Animation" width="auto" height="auto" style="max-width: 100%;">
+    <div class="home_container">
+        <header>
+            <h1 class="greetings" style="color: #5c3370;">Hello World!<span class="wave">👋</span></h1>
+            <h2>I'm Virginia Nelai</h2>
+            <h4>A Junior Software Engineer focused on building websites and applications 
+                that drive product success. Skilled in frontend development, UI design, 
+                and security solutions, with expertise in HTML, CSS, JavaScript, and React. 
+                I'm passionate about creating impactful user experiences.</h4>
+        </header>
+        <div class="social-media-div">
+            <a href="https://github.com/vnelai" class="sm-button github" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-github"></i>
+            </a> 
+            <a href="https://www.linkedin.com" class="sm-button linkedin" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-linkedin-in"></i>
+            </a> 
+            <a href="mailto:vnelai01@gmail.com" class="sm-button google" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-google"></i>
+            </a>
+            <a href="https://www.facebook.com" class="sm-button facebook" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="https://www.instagram.com" class="sm-button instagram" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://twitter.com/" class="sm-button twitter" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="https://medium.com" class="sm-button medium" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-medium"></i>
+            </a>
+            <a href="https://www.youtube.com" class="sm-button youtube" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+        </div>
+        <div class="home-buttons">
+            <a href="/Pages/contact_me.html"><button>Contact Me</button></a>
+            <a href="/Pages/my_resume.html"><button>See My Resume</button></a>
+            <a href="/Pages/projects.html"><button>View My Projects</button></a>
+        </div>
+        <div>
+            <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExeGFhb25ucnNvcjQyaTBsc3ExMGRoZmRxb3Qwc2Z2YnNnOWQybTFnYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/FcqKy4Kj7XOK0hCW4g/giphy.webp" alt="Giphy-Animation" height="auto" style="width: 75%;">
+        </div>
     </div>
 </body>
 </html>
