Add dropdown menu in languages of resume

--- a/Pages/about_me.html
+++ b/Pages/about_me.html
@@ -70,11 +70,11 @@
                     <p>Python</p>
                 </li>
                 <li class="tech-skill" name="R">
-                    <i class="fas fa-code"></i> <!-- This uses a generic code icon -->
+                    <i class="fas fa-code"></i> 
                     <p>R</p>
                 </li>
                 <li class="tech-skill" name="MySQL">
-                    <i class="fas fa-database"></i> <!-- MySQL icon representation -->
+                    <i class="fas fa-database"></i>
                     <p>MySQL</p>
                 </li>
                 <li class="tech-skill">
@@ -86,8 +86,8 @@
                     <p>Threat Protection</p>
                 </li>
             </ul>
-        </div>
-        <div>
+        </div>    
+        <div>  
             <img src="/Media/story book.jpg" alt="Story Book" width="100%" height="auto" style="max-width: 600px; display: block; margin: 0 auto;">
         </div>
     </div>
