--- a/Pages/my_resume.html
+++ b/Pages/my_resume.html
@@ -127,13 +127,16 @@
                 </tr>
             </tbody>
         </table>
-
         <hr> 
         <h2>Languages</h2>
-        <ul>
-            <li>English</li>
-            <li>Greek</li>
-        </ul>
+        <div class="lang_dropdown">
+            <button class="dropdown_button">Hover Me</button>
+            <ul class="dropdown_menu">
+                <li class="dropdown_item">English</li>
+                <li class="dropdown_item">Greek</li>
+             </ul>
+        </div>
+        
     </div>
 </body>
 </html>
