Fine tune contact me page container alignment

--- a/Pages/contact_me.html
+++ b/Pages/contact_me.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="/Styles/style.css">
     <title>Contact Me</title>
 </head>
-<body>
+<div>
+  <body class="contact_me_page_container">
     <div class="contact__form_container">
       <div id="contact_me_header">
         <h1>Contact Me</h1>
@@ -29,20 +30,21 @@
         <button type="submit" id="contact_submit_button">Submit</button>
       </form>
     </div> 
-</body>
-<footer>
-  <div class="newsletter_container">
-    <div id="newsletter_header">
-      <h2>Subscribe to my Newsletter</h2>
-      <p>Stay updated on my latest projects 😊 </p>
-    </div>
-    <form action="#" method="post">
-      <div class="newsletter_field">
-        <label for="email" class="newsletter_label">Email:</label>
-        <input class="newsletter_input" id="email" name="email" placeholder="Enter your email">
+  </body>
+  <footer>
+    <div class="newsletter_container">
+      <div id="newsletter_header">
+        <h2>Subscribe to my Newsletter</h2>
+        <p>Stay updated on my latest projects 😊 </p>
       </div>
-      <button type="submit" id="newsletter_submit_button">Subscribe</button>
-  </div>
-  </form>
-</footer>
+      <form action="#" method="post">
+        <div class="newsletter_field">
+          <label for="email" class="newsletter_label">Email:</label>
+          <input class="newsletter_input" id="email" name="email" placeholder="Enter your email">
+        </div>
+        <button type="submit" id="newsletter_submit_button">Subscribe</button>
+    </div>
+    </form>
+  </footer>
+</div>
 </html>
